--- a/tradezonemarket/src/main/resources/static/css/style.css
+++ b/tradezonemarket/src/main/resources/static/css/style.css
@@ -105,15 +105,13 @@ h1{
     display: none;
 }
 .auth_form_wrapper{
+    display: flex;
+    flex-direction: column;
     position: relative;
     margin: 0 auto;
-    padding: 10px 80px 40px 80px;/*top , left&right, bottom*/
     width: 255px;
     min-height: 475px;
-    /*border-radius: 10px;*/
-    /*overflow: hidden;*//*dropshadow*/
-    background-color: transparent;
-    box-shadow: inset 0 1px 0px 1px rgb(202 202 202 / 50%);/*#cacaca80 same*/
+    min-width: 400px;
 }
 .lifted {
     -moz-border-radius: 4px;
@@ -160,7 +158,6 @@ h1{
 }
 .auth_form_wrapper.large .form-block{
     padding: 25px 45px 0;
-    row-gap: 25px;
 }
 .form-block{
     position: relative;
@@ -168,7 +165,6 @@ h1{
     flex-direction: column;
     row-gap: 10px;
     z-index: 2;
-    padding-top: 70px;
 }
 .field-wrapper{
     display: flex;
@@ -328,7 +324,6 @@ button, input[type="button"], input[type="submit"], .button, .submit{
     align-self: stretch;
     text-align: center;
     text-decoration: none;
-    /*border: 1px solid #cacaca;*//*NB: desktop browsers dont support border width less than 1px*/
     border: none;
     box-shadow: none;
 }
