--- a/tradezonemarket/src/main/resources/static/css/mobileportrait.style.css
+++ b/tradezonemarket/src/main/resources/static/css/mobileportrait.style.css
@@ -9,13 +9,16 @@
         font-size: 22px;
     }
     .auth_form_wrapper{
-        padding: 25px 25px 0px;
+        padding: 0;
         border-radius: 0;
         width: 100vw;
         box-shadow: none;
     }
     .auth_form_wrapper .overlay{
         display: none;
+    }
+    .auth_form_wrapper form {
+        padding: 20px 50px;
     }
     .field-wrapper{
         display: inherit;
